--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,81 @@
 body {
 	margin: 0px;
 	padding: 0px;
+	align-items: center;
+	justify-content: center;
+	font-family: Arial;
+}
+div {
 	display: flex;
-	background: url("https://source.unsplash.com/collection/827743/400x200") no-repeat center center fixed;	
+}
+.background {
+	position: absolute;
+	top:0px;
+	left: 0px;
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	    /*background: url("https://source.unsplash.com/collection/827743/1600x1200") no-repeat center;*/
+    background: url("img/photo-1549321495-305eb13f8aa9.jpeg") no-repeat center;
 	background-size: cover;
+	filter: blur(6px) contrast(120%) saturate(120%);
 }
 .navbar {
+	position: relative;
 	width: 75%;
 	height: 50px;
 	margin: 0 auto;
-	background: rgba(255, 255, 255, 0.7);	
+	background: rgba(255, 255, 255, 0.3);
 }
+.navbar ul {
+	display: inline;
+	width: 100%;
+	text-align: center;
+} 
 .navbar ul li {
 	list-style-type: none;
-	display: inline;
+	display: inline-block;
 	margin: 0px;
-	padding: 0px;
+	padding: 0 20px 0 0;
 }
+
+.navbar ul li a {
+	text-decoration: none;
+	text-transform: uppercase;
+	font-family: Arial;
+	font-weight: 200;
+	color: #808080;
+}
+
+.navbar ul li a:hover {
+	color: #606060;
+	text-shadow: 0px 1px 30px #606060;
+}
+
+.login {
+	display: block;
+	padding: 30px;
+	position: relative;
+	margin: 0 auto;
+	margin-top: 10%;
+	background: rgba(255, 255, 255, 0.3);
+	width: 300px;
+	height: 400px;
+	/*background: url("https://source.unsplash.com/collection/827743/1600x1200") no-repeat center;*/
+	background: url("img/photo-1549321495-305eb13f8aa9.jpeg") no-repeat center;
+	filter: contrast(110%) saturate(110%);
+	background-size: cover;
+	justify-content: center;
+}
+
+form {
+	/*display: inline-flex;*/
+	max-width: 100%;
+}
+
+h2 {
+
+	color: #fff;
+	text-shadow: 0px 1px 4px #606060;
+}
+
