--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ div {
 	    /*background: url("https://source.unsplash.com/collection/827743/1600x1200") no-repeat center;*/
     background: url("img/photo-1549321495-305eb13f8aa9.jpeg") no-repeat center;
 	background-size: cover;
-	filter: blur(6px) contrast(120%) saturate(120%);
+	filter: blur(3px) saturate(120%);
 }
 .navbar {
 	position: relative;
@@ -26,6 +26,9 @@ div {
 	height: 50px;
 	margin: 0 auto;
 	background: rgba(255, 255, 255, 0.3);
+	border-radius: 0 0 40px 40px;
+	box-shadow: inset 0px -3px 1px -2px rgba(0, 0, 0, 0.5),
+				0px 3px 5px -5px rgba(0, 0, 0, 0.5);
 }
 .navbar ul {
 	display: inline;
@@ -40,11 +43,13 @@ div {
 }
 
 .navbar ul li a {
+	font-size: 18px;
 	text-decoration: none;
 	text-transform: uppercase;
 	font-family: Arial;
 	font-weight: 200;
-	color: #808080;
+	color: #007070;
+	letter-spacing: 2px;
 }
 
 .navbar ul li a:hover {
@@ -54,28 +59,79 @@ div {
 
 .login {
 	display: block;
-	padding: 30px;
 	position: relative;
 	margin: 0 auto;
-	margin-top: 10%;
-	background: rgba(255, 255, 255, 0.3);
+	margin-top: 5%;
 	width: 300px;
-	height: 400px;
+	height: 450px;
 	/*background: url("https://source.unsplash.com/collection/827743/1600x1200") no-repeat center;*/
 	background: url("img/photo-1549321495-305eb13f8aa9.jpeg") no-repeat center;
-	filter: contrast(110%) saturate(110%);
+	box-shadow: 
+		0px 1px 2px 1px rgba(0, 0, 0, 0.5),
+	 	0px 1px 3px 1px rgba(0, 0, 0, 0.2),
+	 	0px 3px 6px 2px rgba(0, 0, 0, 0.1);
+	 	/*inset 0 0 100px 100px rgba(30,30,30, 0.1);*/
+
+	 	/*0 12px 15px 0 rgba(0,0,0,0.692),*/
+    	/*0 17px 10px 0 rgba(0,0,0,479);*/
+	border-radius: 12px;
+	/*filter: saturate(110%);*/
 	background-size: cover;
 	justify-content: center;
+	overflow: hidden;
+}
+
+.login-bg {
+	background-color: rgba(30,30,30, 0.05);
+	/*box-shadow: inset 0 0 100px 5px rgba(30,30,30, 0.1);*/
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	position: relative;
+	display: block;
+	padding: 10px;
+
 }
 
 form {
-	/*display: inline-flex;*/
 	max-width: 100%;
 }
 
 h2 {
-
+	font-size: 40px;
+	margin: 10px;
+	font-family: Arial;
+	letter-spacing: 3px;
+	text-align: center;
 	color: #fff;
-	text-shadow: 0px 1px 4px #606060;
+	font-weight: 300;
+	text-shadow: 0px -0.5px 3px #606060, -0.1px -0.1px 0.5px black, -0.3px -0.5px 0.1px white;
 }
 
+form {
+	margin-top: 10px;
+}
+
+label {
+	color: #fff;
+	text-shadow: -0.2px -0.2px 0.2px black, 0.2px 0.2px 0.2px white, 0px -0.5px 2px #606060;
+	margin: 5px;
+	font-weight: 800;
+	text-transform: uppercase;
+	font-size: 14px;
+	letter-spacing: 1px;
+	/*display: block;*/
+}
+
+input {
+	display: block;
+	margin: 0 auto;
+	padding: 7px;
+	border: solid 1px rgba(30,112,112,0.5);
+	border-radius: 7px;
+	background-color: rgba(30,92,92, 0.2);
+}
+
+input[type="checkbox"] {
+	display: inline-block;
+}
