--- a/styles.css
+++ b/styles.css
@@ -15,8 +15,8 @@ div {
 	width: 100%;
 	height: 100%;
 	position: fixed;
-	    /*background: url("https://source.unsplash.com/collection/827743/1600x1200") no-repeat center;*/
-    background: url("img/photo-1549321495-305eb13f8aa9.jpeg") no-repeat center;
+	    background: url("https://source.unsplash.com/collection/827743/1600x1200") no-repeat center;
+    /*background: url("img/photo-1549321495-305eb13f8aa9.jpeg") no-repeat center;*/
 	background-size: cover;
 	filter: blur(3px) saturate(120%);
 }
@@ -63,9 +63,9 @@ div {
 	margin: 0 auto;
 	margin-top: 5%;
 	width: 300px;
-	height: 450px;
-	/*background: url("https://source.unsplash.com/collection/827743/1600x1200") no-repeat center;*/
-	background: url("img/photo-1549321495-305eb13f8aa9.jpeg") no-repeat center;
+	height: 400px;
+	background: url("https://source.unsplash.com/collection/827743/1600x1200") no-repeat center;
+	/*background: url("img/photo-1549321495-305eb13f8aa9.jpeg") no-repeat center;*/
 	box-shadow: 
 		0px 1px 2px 1px rgba(0, 0, 0, 0.5),
 	 	0px 1px 3px 1px rgba(0, 0, 0, 0.2),
@@ -79,6 +79,7 @@ div {
 	background-size: cover;
 	justify-content: center;
 	overflow: hidden;
+	padding: 5px;
 }
 
 .login-bg {
@@ -87,9 +88,10 @@ div {
 	width: 100%;
 	height: 100%;
 	overflow: hidden;
-	position: relative;
+	position: absolute;
+	left: 0;
+	top: 0;
 	display: block;
-	padding: 10px;
 
 }
 
@@ -115,15 +117,22 @@ form {
 label {
 	color: #fff;
 	text-shadow: -0.2px -0.2px 0.2px black, 0.2px 0.2px 0.2px white, 0px -0.5px 2px #606060;
-	margin: 5px;
+	margin: 10px;
 	font-weight: 800;
 	text-transform: uppercase;
 	font-size: 14px;
 	letter-spacing: 1px;
-	/*display: block;*/
+	display: inline-block;
+}
+
+label[for="keep-session"] {
+	font-size: 13px;
+	text-transform: none;
+	margin-top: 20px;
 }
 
 input {
+	width: 75%;
 	display: block;
 	margin: 0 auto;
 	padding: 7px;
@@ -134,4 +143,54 @@ input {
 
 input[type="checkbox"] {
 	display: inline-block;
+	width: auto;
+	margin: 0;
+	padding: 0;
+	vertical-align: middle;
+}
+
+input[type="submit"] {
+	width: 130px;
+	padding: 15px;
+	border-radius: 12px;
+	margin-top: 15px;
+	color: #fff;
+	font-weight: bold;
+	background-color: rgba(160,224,224, 0.4);
+	text-shadow: -0.2px -0.2px 0.2px rgba(30,112,112, 1), 0.2px 0.2px 0.2px rgba(30,112,112,0.5), 0px -0.5px 2px rgba(30,112,112,0.9);
+}
+
+input[type="submit"]:hover {
+	background-color: rgba(60,100,100, 0.7);
+	border: 1px solid white;
+	cursor: pointer;
+}
+
+.login a {
+		color: #fff;
+	text-shadow: -0.2px -0.2px 0.2px black, 0.2px 0.2px 0.2px white, 0px -0.5px 2px #606060;
+	margin: 5px;
+	font-weight: 800;
+	text-transform: none;
+	font-size: 13px;
+	letter-spacing: 1px;
+	text-decoration: none;
+	display: block;
+}
+
+.login a:hover {
+	/*color: #606060;*/
+	text-shadow: -0.2px -0.2px 0.2px rgb(7,28,28), 0.2px 0.2px 0.2px rgb(30,112,112), 0px -0.5px 2px #606060;
+	color: rgba(230,255,255, 0.99);
+}
+
+hr {
+	padding: 0;
+	display: flex;
+	width: 65%;
+	opacity: 0.25;
+	border: 0;
+    height: 0;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
