--- a/styles.css
+++ b/styles.css
@@ -15,10 +15,11 @@ div {
 	width: 100%;
 	height: 100%;
 	position: fixed;
-	    background: url("https://source.unsplash.com/collection/827743/1600x1200") no-repeat center;
-    /*background: url("img/photo-1549321495-305eb13f8aa9.jpeg") no-repeat center;*/
+	background-color: #369;
+	    /*background: url("https://source.unsplash.com/collection/827743/1600x1200") no-repeat center;*/
+    background: url("img/photo-1549321495-305eb13f8aa9.jpeg") no-repeat center;
 	background-size: cover;
-	filter: blur(3px) saturate(120%);
+	filter: blur(3px) saturate(75%);
 }
 .navbar {
 	position: relative;
@@ -50,6 +51,7 @@ div {
 	font-weight: 200;
 	color: #007070;
 	letter-spacing: 2px;
+	text-shadow: -0.1px -0.2px 0.2px rgba(255, 255, 255, 0.75), 0.1px 0.1px 0.2px rgba(255, 255, 255, 0.75), 0.1px 0.1px 0.7px white;
 }
 
 .navbar ul li a:hover {
@@ -64,8 +66,8 @@ div {
 	margin-top: 5%;
 	width: 300px;
 	height: 400px;
-	background: url("https://source.unsplash.com/collection/827743/1600x1200") no-repeat center;
-	/*background: url("img/photo-1549321495-305eb13f8aa9.jpeg") no-repeat center;*/
+	/*background: url("https://source.unsplash.com/collection/827743/1600x1200") no-repeat center;*/
+	background: url("img/photo-1549321495-305eb13f8aa9.jpeg") no-repeat center;
 	box-shadow: 
 		0px 1px 2px 1px rgba(0, 0, 0, 0.5),
 	 	0px 1px 3px 1px rgba(0, 0, 0, 0.2),
